# fdc-client

./: .env  .env.example  .gitignore  .gitlab-ci.yml  .golangci.yml  Arhitecture.md  Dockerfile  Dockerfile.golang  Dockerfile.python  README.md  docker-compose.yml  gencover.sh  go.mod  go.sum  pyproject.toml  systemConfig.toml  userConfig.toml
.github/workflows/: build-docker.yml
client-old/attestation/: round.go
client-old/bitvote/: bitvote.go  shuffle.go
client-old/collector/: parseBitvote.go  parseRequest.go  runner.go
client-old/router/: router.go
client/attestation/: attestation.go  attestation_test.go  bitWalk.go  bitWalk_test.go  bitvote.go  bitvote_test.go  branchAndBound.go  branchAndBoundProviders.go  branchAndBoundProviders_test.go  branchAndBound_test.go  export_test.go  manager.go  manager_test.go  queues.go  round.go  round_test.go  verification.go  verification_test.go  verifiers.go
client/bitvote/: bitvote.go
client/collector/: choose.go  choose_test.go  collector.go  collector_test.go  (+9 more)
config/: config.go  parse.go  read.go
configs/: systemConfig.toml  userConfig.toml
flare-common/: README.md  go.mod  go.sum
main/: main.go
server/: README.md  daControler.go  daController.go  daServices.go  daServices_test.go  export_test.go  main.go  providerCommon.go  providerControler.go  providerController.go  providerServices.go  server.go  server_test.go  types.go
src/: __main__.py  collector.py  config.py  database.py  logger.py  manager.py  metrics.py  round.py  server.py  shared.py  timing.py
tests/: test_round.py  test_timing.py
(+153 files in other folders)
