[project]
name = "fdc-client-python"
version = "0.1.0"
description = "A Python implementation of the Flare Data Connector client."
dependencies = [
    "tomli",
    "mysql-connector-python",
    "psycopg2-binary",
    "fastapi",
    "uvicorn",
    "eth-abi",
    "pycryptodome",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]